--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "six-cities",
   "version": "7.0.0",
-  "description": "Проект «{{projectTitle}}» от HTML Academy",
+  "description": "Six cities",
   "keywords": [
     "rest",
     "api",
